# licguard

./: Cargo.toml  Justfile
cli/: Cargo.toml  go.mod
cli/net/: net.go
cli/src/: main.rs
client/: Cargo.toml
client/src/: client.rs  gui.rs  lib.rs
client/src/client/: connection.rs
proto/: Cargo.toml  build.rs
proto/protofiles/admin_client/: v1.proto
proto/protofiles/software/: v1.proto
proto/src/: lib.rs
proto/src/software/: v1.rs
server/: Cargo.toml  config.toml
server/migration/: Cargo.toml  db.data
server/migration/src/: m20220101_000001_create_table.rs
server/migration/tests/: test_creations.rs
server/src/: lib.rs  main.rs  v1_server.rs
server/src/entities/: admin_key.rs  app.rs  license.rs  license_log.rs  mod.rs  prelude.rs
server/src/v1_server/: connection.rs
server/tests/: test_creation.rs
