[workspace]
members = [
  "proto",
  "server",
  "client",
  "cli",
  "server/migration"
]
resolver = "2"

[workspace.dependencies]
tokio = {version = "1.43.0", features = ["full"]}
serde = {version = "1.0.217", features = ["derive"]}
ed25519-dalek.version = "2.1.1"
ed25519-dalek.features = ["serde", "signature"]
sea-orm = { version = "1.1.4", features = ["mock", "runtime-tokio-rustls", "sqlx-all"] }
tarpc = { version = "0.35.0", features = ["full"] }
tonic = "0.12.3"
chrono = {version = "0.4.39", features = ["serde"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-stream = { version = "0.1.17", features = ["sync"] }
thiserror = "1.0.41"