[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.20.2"
rand = "0.9.0"
serde_json = "1.0.138"
serde.workspace = true
proto.path = "../proto"
dialoguer = "0.11.0"
colored = "3.0.0"
chrono.workspace = true
tonic.workspace = true
tokio-stream.workspace = true
tokio = {workspace = true, features = ["full"]}
fatality = "0.1.1"
thiserror.workspace = true
egui = "0.31.0"
