[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
sea-orm.workspace = true
tarpc.workspace = true
tonic.workspace = true
ed25519-dalek.workspace = true
serde_json = "1.0.138"
bincode = "1.3.3"
tonic-build = "0.12.3"
prost = "0.13.5"
prost-types = "0.13.5"
chrono.workspace = true
hex = { version = "0.4.3", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12.3"
