[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
migration.path = "./migration"
serde.workspace = true
proto.path = "../proto"
figment = { version = "0.10.19", features = ["toml", "env"] }
eyre = "0.6.12"
sea-orm.workspace = true
bytes = "1.10.0"
axum = { version = "0.8.1", features = ["ws"] }
cached = "0.54.0"
tonic.workspace = true
futures = "0.3.31"
chrono.workspace = true
serde_json = "1.0.138"
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
